[package]
name = "r_march"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.1"
nalgebra-glm = "0.18.0"
glium = "0.32.1"
gl33 = {version="0.2.1", features = ["global_loader"]}
bytemuck = "1.13.0"
fermium = "22401.1.0"
beryllium = "0.9.0"
#beryllium = { version = "0.9.0", default-features = false, features = ["link_static"] } #uncomment for static SDL linking
num-traits = "0.2.15"
simba = "0.8.0"

[dev-dependencies]
imagine = "0.3.1"